Color FIxes for Contrast

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -69,6 +69,11 @@ header h1 {
     padding: .5rem .75rem;
     margin-top: -40px;
     width: 50px;
+    color: var(--secondary-color); 
+    background-color: transparent;
+    border: none; 
+    cursor: pointer;
+    outline: none; 
 }
 
 .navigation {
@@ -129,8 +134,8 @@ nav a:active {
     left: 50%;
     transform: translateX(-50%);
     padding: 10px 20px;
-    background-color: #92140c;
-    color: #fff;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
     text-decoration: none;
     border-radius: 5px;
     transition: background-color 0.3s ease;
@@ -151,7 +156,7 @@ nav a:active {
 
 .card {
     width: calc(50% - 10px); 
-    background-color: #f0f0f0; 
+    background-color: var(--secondary-color); 
     padding: 20px;
     box-sizing: border-box;
     border-radius: 5px;
